--- a/Exercise1/css/style.css
+++ b/Exercise1/css/style.css
@@ -1,17 +1,14 @@
-/* Thiết lập cơ bản */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
-    background-color: #f4f4f4; /* Màu xám nhạt */
+    background-color: #f4f4f4; 
 }
 
-/* Class dùng để ẩn các trang không cần thiết */
 .hidden {
     display: none;
 }
 
-/* Style tạm cho Navigation để dễ nhìn */
 nav {
     background-color: #333;
     color: white;
@@ -31,8 +28,13 @@ nav a {
     text-decoration: none;
 }
 
-/* Đổi màu khi menu đang được chọn */
+
 nav a.active {
     font-weight: bold;
-    color: #ffd700; /* Màu vàng */
+    color: #ffd700; 
+}
+
+.logo img {
+    height: 50px;
+
 }
